# imekit

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
examples/: basic_ime.rs  commit_text.rs
src/: error.rs  ibus.rs  lib.rs  linux.rs  linux_xtest.rs  logging.rs  macos.rs  types.rs  windows.rs  x11.rs
src/wayland/: async_stream.rs  input_method.rs  mod.rs  text_input.rs
